# xgboost-trader-daily

./: .gitignore  Dockerfile  api_pred.py  docker-compose.yml  main.py  main2.py  main_move_test.py  pyproject.toml
.github/workflows/: deploy.yml
bat-scripts/: run_main.bat
common/: data_processor_feat.py  feat_filter.py  get_value.py  helper_fin.py  load_concat_merge.py  make_feat_alt.py  ml_helper.py  model_manager.py  move_one_file.py  pandas_helper.py  path_man.py  pipe_features_alt.py  ticker_helper.py  trade_pipeline.py
common/ccxt/: bybit_client.py  position_to_trade.py
common/load_tickers/: altcoins_normal.json  altcoins_small.json  load_ticker_daily.py  load_ticker_names.py  tickers.json
models/intervals/lstm/: lstm1.py
models/intervals/xgboost/: wld_5min.py
models/retrain/daily/BTC/: BTC_D.py
models/retrain/daily/WLD/: WLD_D.py
models/saved/5/WLD/: WLD_5_config.json  WLD_5_xgb_meta.json
