[project]
name = "clean-prog"
version = "0.1.0"
description = ""
authors = [
    {name = "Daniil Bystrov",email = "gervafrokit2112@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10, <3.14"
dependencies = [
    "numpy (>=1.26.3,<3.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "joblib (>=1.5.2,<2.0.0)",
    "holidays (>=0.85,<0.86)",
    "dotenv (>=0.9.9,<0.10.0)",
    "xgboost (>=3.1.2,<4.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "fastapi (>=0.123.9,<0.124.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "ccxt (>=4.5.26,<5.0.0)",
    "pybit (>=5.13.0,<6.0.0)"
]


[tool.poetry]
packages = [
    { include = "common" }
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ipykernel (>=7.1.0,<8.0.0)"
]
